install-meta (0.1.43) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 10 Nov 2007 14:28:02 +0100

install-meta (0.1.42) unstable; urgency=low

  * ensure to bail out on unsuitable packages.
  * COPYING belongs into the upstream source.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 10 Nov 2007 14:25:56 +0100

install-meta (0.1.41) unstable; urgency=low

  [ Horst Tritremmel ]
  * new non-free [Button] handling for sources.list.d
  * switch to mirror.debian.org.list
  * selection in treeview of non-free packages updated

  [ Stefan Lippers-Hollmann ]
  * remove bibletime again, it really doesn't belong there!
  * switch to debian.list and sidux.list.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 09 Nov 2007 00:52:36 +0100

install-meta (0.1.40) unstable; urgency=low

  * education metapackages updated

 -- Horst Tritremmel <hjt@sidux.com>  Tue, 06 Nov 2007 16:07:28 +0100

install-meta (0.1.39) unstable; urgency=low

  * Games updated 

 -- Horst Tritremmel <hjt@sidux.com>  Sun, 04 Nov 2007 21:27:35 +0100

install-meta (0.1.38) unstable; urgency=low

  * Update debian menu section as per new subpolicy.

 -- Kel Modderman <kel@otaku42.de>  Thu, 25 Oct 2007 22:12:03 +1000

install-meta (0.1.37) unstable; urgency=low

  * Non_free-Firmware_Intel_Wireless_ipw3945.bm Non_free-
    Firmware_iwlwifi_back_to_ipw3945.bm removed
  * Description for iwlwifi meta changed

 -- Horst Tritremmel <hjt@sidux.com>  Tue, 09 Oct 2007 16:41:34 +0200

install-meta (0.1.36) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * update syntax for Vcs headers in debian/control

  [ Horst Tritremmel ]
  * Metapackages Games updated

 -- Horst Tritremmel <hjt@sidux.com>  Mon, 08 Oct 2007 09:25:17 +0200

install-meta (0.1.35) unstable; urgency=low

  * Education-10_to_99_years.bm updated

 -- Horst Tritremmel <hjt@sidux.com>  Mon, 17 Sep 2007 14:39:12 +0200

install-meta (0.1.34) unstable; urgency=low

  * add VCS control headers.