@@ -10,7 +10,7 @@ Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/install-meta/trunk/
 
 Package: install-meta
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, xterm | x-terminal-emulator
+Depends: ${shlibs:Depends}, ${misc:Depends}, xterm | x-terminal-emulator, dctrl-tools
 Description: Install additional meta tasks to sidux
  Frontend for installing additional meta tasks.
  Put the <metapackage-description-files>.bm to /usr/share/install-meta/
